fix map cutoff

--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,7 @@ ul.socials-top li {
   position: absolute;
   top: 0;
   left: 0;
-  width: 80%;
+  width: 68%;
   height: 100%;
   display: block;
   background-image: linear-gradient(to right, rgba(255, 255, 255, 1) 90%, transparent);
